Fix issue with radio button template
The `#each` block changes the template context, i.e. what variables can
be used. So you need to use `../` to access the outer block.

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -16,7 +16,7 @@
               {{#if RadioField}}
                   <p>{{RadioField.text}}</p>
                   {{#each RadioField.choices}}
-                      <input type="radio" name="{{RadioField.text}}" value={{this.value}}>
+                      <input type="radio" name="{{../RadioField.text}}" value={{this.value}}>
                       <label>{{this.text}}</label></br>
                   {{/each}}
               {{/if}}
