--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="container">
-            <form>
+            <form method="POST">
                 {{#each missions }}
                     <div class="card">
                         <div class="card-body">
@@ -35,6 +35,7 @@
                         </div>
                     </div>
                 {{/each}}
+                <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
     </body>
