--- a/templates/footer.hbs
+++ b/templates/footer.hbs
@@ -1,8 +1,10 @@
-<footer class="bg-light text-dark text-center text-sm-left p-3 p-md-5 mt-5">
-    <div class="container">
-        <div class="row">
-            <p>Built with Rust, Handlebars, and Bootstrap</p>
-            <p>By Harry Tucker</p>
+<div class="footer fixed-bottom text-center text-sm-left">
+    <footer class="bg-light text-dark text-center text-sm-left p-3 p-md-5 mt-5">
+        <div class="container">
+            <div class="row">
+                <p>Built with Rust, Handlebars, and Bootstrap</p>
+                <p>By Harry Tucker</p>
+            </div>
         </div>
-    </div>
-</footer>
+    </footer>
+</div>
